@@ -1,5 +1,10 @@
 2008-11-05	Brian Tarricone <bjt23@cornell.edu>
 
+	* xfce4-session/xfsm-startup.c: Be sure to set the current
+	  working directory of restored clients when starting them.
+
+2008-11-05	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-manager.c: Ignore timeout errors from dbus
 	  when using HAL to suspend/hibernate.
 
